Master into nightly dev (#369)
* Update for the service getAllUserCases to convert it to elastic search (#293)

* RET-2961 - wrong pdf template (#298)

* Update CaseServiceTest.java

* ret-3168 implementation reimported to new branch (#305)

* ret-3168 implementation reimported to new branch

* Bumping chart version/ fixing aliases

* template ids updated

Template ids are updated for case submission emails. Also, new id is added for doc upload error email.  All three email template ids are for prod environment.

* user selected language check logic corrected

* prod template ids restored

---------

Co-authored-by: hmcts-jenkins-d-to-i <62423932+hmcts-jenkins-d-to-i[bot]@users.noreply.github.com>

* PET 1.1.1.2 fix (#308)

* PET 1.1.1.2 fix

* PET 1.1.1.2 fix (#309)

* PET 1.1.1.2 fix

* PET 1.1.1.2 fix

* Fix Emails (#326)

* Fortify issue fix (#324)

* Fortify issue fix

* Fortify issue fix

* Merge with master branch

* Update all dependencies (#323)

* Update all dependencies

* Bumping chart version/ fixing aliases

* Update gradle-wrapper.properties

* Bumping chart version/ fixing aliases

* Fix breaking versions

* Bump commons-fileupload

* Remove suppression

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: hmcts-jenkins-d-to-i <62423932+hmcts-jenkins-d-to-i[bot]@users.noreply.github.com>
Co-authored-by: marcjudge <98343606+marcjudge@users.noreply.github.com>
Co-authored-by: marcjudge <marc.judge@hmcts.net>

* ES Fix (#341)

* Add timeout to functional test (#344)

* Add timeout to functional test

* Remove body

* CVE Fixes (#348)

* Update all dependencies (#346)

* Update all dependencies

* Fix packages

* Update build.gradle

* Update build.gradle

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Harpreet Jhita <harpreet.jhita@justice.gov.uk>
Co-a